--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
