--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "argon2": "^0.40.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.5.1",
