--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
     "argon2": "^0.40.1",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
