--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
-    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "amqplib": "^0.10.5",
     "argon2": "^0.40.1",
     "axios": "^1.8.1",
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
